# ChangeLog for net-misc/aria2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/aria2/ChangeLog,v 1.65 2010/08/30 05:24:54 dev-zero Exp $

*aria2-1.10.1 (30 Aug 2010)

  30 Aug 2010; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.10.1.ebuild:
  Version bump.

*aria2-1.10.0 (19 Jul 2010)

  19 Jul 2010; Tiziano Müller <dev-zero@gentoo.org>
  -files/1.6.3-unaligned_pointers.patch, +aria2-1.10.0.ebuild:
  Version bump. Dropped old patch.

*aria2-1.9.4 (05 Jun 2010)

  05 Jun 2010; Tiziano Müller <dev-zero@gentoo.org> -aria2-1.6.3.ebuild,
  -aria2-1.8.3.ebuild, -aria2-1.9.0.ebuild, -aria2-1.9.2.ebuild,
  +aria2-1.9.4.ebuild:
  Version bump. Dropped old.

  23 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> aria2-1.9.3.ebuild:
  x86 stable wrt security bug #320975

  22 May 2010; Peter Volkov <pva@gentoo.org> aria2-1.9.3.ebuild:
  amd64 stable, security bug 320975

*aria2-1.9.3 (14 May 2010)

  14 May 2010; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.9.3.ebuild:
  Version bump.

*aria2-1.9.2 (06 May 2010)

  06 May 2010; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.9.2.ebuild:
  Version bump (bug #315649).

*aria2-1.9.0 (27 Mar 2010)

  27 Mar 2010; Tiziano Müller <dev-zero@gentoo.org> -aria2-1.8.2.ebuild,
  +aria2-1.9.0.ebuild:
  Version bump (bug #311305). Dropped old.

*aria2-1.8.3 (22 Feb 2010)

  22 Feb 2010; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.8.3.ebuild:
  Version bump.

  06 Feb 2010; Tiziano Müller <dev-zero@gentoo.org> metadata.xml:
  Added upstream info.

*aria2-1.8.2 (06 Feb 2010)

  06 Feb 2010; Tiziano Müller <dev-zero@gentoo.org> -aria2-1.6.3-r1.ebuild,
  -aria2-1.7.0.ebuild, -aria2-1.8.1.ebuild, +aria2-1.8.2.ebuild:
  Version bump. Dropped old.

*aria2-1.8.1 (25 Jan 2010)

  25 Jan 2010; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.8.1.ebuild:
  Version bump (fixes bug #299630, #302161 and #296830, thanks to Manu
  Wächter, Ivan Ivanich and Till Korten).
