@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/aria2
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/aria2/ChangeLog,v 1.65 2010/08/30 05:24:54 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/aria2/ChangeLog,v 1.66 2010/09/01 16:27:14 dev-zero Exp $
+
+*aria2-1.10.2 (01 Sep 2010)
+
+  01 Sep 2010; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.10.2.ebuild:
+  Version bump.
 
 *aria2-1.10.1 (30 Aug 2010)
 
